# nostr-delivery

./: App.tsx  Cargo.toml  Dockerfile.txt  README.md  crypto.ts  docker-compose.yml  file_manifest.md  lib.rs  main.rs  package-lock.json  package.json  quickstart_guide.md  setup_instructions.md
backend/: Cargo.toml  Dockerfile
backend/src/: Cargo.toml  lib.rs  main.rs
frontend/: .env  Dockerfile  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useDelivery.ts  useLightning.ts  useNWC.ts  useNostr.ts
frontend/src/lib/: api.ts  crypto.ts  nip44.ts  payments.ts  utils.ts
frontend/src/types/: delivery.ts  nostr.ts  nwc.ts
