[package]
name = "nostr-delivery-backend"
version = "1.0.0"
edition = "2021"
authors = ["Nostr Delivery Team"]
description = "Decentralized peer-to-peer delivery coordination system"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0